# nk-rest

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  circle.yml  circleci.yml  deploy.sh  nk-rest.cabal  stack.yaml
app/: Main.hs
k8s/: nk-rest.yaml  postgres.yaml
sql/: schema.sql  seeder.sql
src/: Rest.hs
src/NK/: DBConnection.hs
src/NK/Controllers/: Response.hs  User.hs
src/NK/Model/: User.hs
src/NK/Util/: JsonUtil.hs  Logger.hs
