name:                nk-rest
version:             0.1.0.0
synopsis:            Rest API
description:         A Haskell based Rest API
homepage:            https://github.com/alexanderobi/nk-rest#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Obi
maintainer:          alexebube@gmail.com
copyright:           2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rest
                     , NK.DBConnection
                     , NK.Model.User
                     , NK.Controllers.User
                     , NK.Util.JsonUtil
                     , NK.Controllers.Response
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai-extra
                     , HDBC
                     , HDBC-postgresql
                     , aeson
                     , text
                     , convertible
                     , containers
                     , transformers
                     , http-types
  default-language:    Haskell2010

executable nk-rest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nk-rest
  default-language:    Haskell2010

test-suite nk-rest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nk-rest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexanderobi/nk-rest
